syntax = "proto3";

package user;

option java_multiple_files = true;
option java_package = "com.example.user";
option java_outer_classname = "UserProto";

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
}

message User {
    string id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
}

message CreateUserRequest {
    string name = 1;
    string email = 2;
    string password = 3;
}

message CreateUserResponse {
    string message = 1;
    UserResponse UserResponse = 2;
}

message UserResponse {
    string id = 1;
    string name = 2;
    string email = 3;
}

message GetUserRequest {
    string id = 1;
}

message GetUserResponse {
    User user = 1;
}